--- a/TMS.Services.Scheduler/App.config
+++ b/TMS.Services.Scheduler/App.config
@@ -5,5 +5,8 @@
     </startup>
 <appSettings>
   <add key="clientURL" value="http://tpsmonitor.seamcloud.com/"/>
+  <add key="ConnectionString" value="Data Source=DESKTOP-LAGIDBH\SQLEXPRESS;Initial Catalog=TMS;Persist Security Info=True;User ID=sa;Password=123456;Connection Timeout=30000" />
+  <add key="partnerId" value="cms"/>
+  <add key="partnerPWD" value="cmstestingpassword"/>
 </appSettings>
 </configuration>
